fix placeholder alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -146,7 +146,6 @@ $orange: rgb(221, 125, 69);
   width: 250px;
 
   .mdc-floating-label {
-    top: 11px;
     color: black !important;
     font-size: .9rem !important;
   }
